# orm_tutorial_v2

./: README.md  main.py  models.py  pyproject.toml
admin/: setup.py  views.py
routes/: pages.py
templates/: index.html
