[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orm_tutorial"
version = "0.1.0"
authors = [
    {name = "Craig"}
]
description = "basic intro to ORM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "aiohttp>=3.13.1",
    "alembic>=1.17.0",
    "fastapi>=0.119.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.38.0",
    "markdown>=3.8.2",
    "pydantic-settings>=2.11.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.11",
    "boto3>=1.40.55",
    "hatchling>=1.27.0",
    "twine>=6.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.14.1",
]

test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "httpx>=0.28.1",
    "pytest-xdist>=3.8.0",
]

[project.scripts]
fastopp = "fastopp:app"
fastopp-startproject = "fastopp:startproject"

[project.optional-dependencies]

dev = ["ruff"]
[tool.hatch.build.targets.wheel]
packages = ["fastopp"]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"
